assets/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');

*{
    background-color: #cbf7ed;;
    color:#161925
}
.navbar{
    background-color:#406e8a;
    color:#161925;
    position:fixed;
    top:0;
    right:0;
    order: -1;
}

.title{
    order:1;
    background-color: #406e8e;
}

.title-bar{
    width:100%;
    padding:20px;
    min-height:10vh;
    background-color: #406e8e;
}

.jumbotron{
    background-color: #cbf7ed;
}

